# aoc-2021

./: Cargo.toml
.github/workflows/: rust.yml
src/: day01.rs  day02_1.rs  lib.rs  neighbours.rs
src/day01/: mod.rs
src/day02/: mod.rs  parse.rs  problem_1.rs  problem_2.rs
src/day03/: mod.rs  problem_1.rs  problem_2.rs
src/day04/: board.rs  game.rs  mod.rs  problem_1.rs  problem_2.rs
src/day05/: map.rs  mod.rs  parse.rs  problem_1.rs  problem_2.rs
src/day06/: mod.rs  problem_1.rs  problem_2.rs
src/day07/: mod.rs  problem_1.rs  problem_2.rs
src/day08/: mod.rs  problem_1.rs  problem_2.rs  sevenseg_deduction.rs
src/day09/: mod.rs  problem_1.rs  problem_2.rs
src/day10/: inspect.rs  mod.rs  problem_1.rs  problem_2.rs  tag.rs
src/day11/: mod.rs  problem_1.rs  problem_2.rs
src/day12/: mod.rs  problem_1.rs  problem_2.rs
src/day13/: mod.rs  problem_1.rs  problem_2.rs
src/day14/: mod.rs  problem_1.rs  problem_2.rs
src/day15/: example_graph.dot  mod.rs  problem_2.rs
src/day16/: mod.rs  parser.rs  problem_1.rs  problem_2.rs
src/day17/: mod.rs  probe.rs  problem_1.rs  problem_2.rs
src/day18/: mod.rs  problem_1.rs  problem_2.rs
src/day19/: beacon.rs  coord.rs  mod.rs  problem_1.rs  problem_2.rs  readme.md  rotation.rs  scanner.rs
src/day20/: image.rs  mod.rs  problem_1.rs  problem_2.rs  readme.md  trenchmap.rs
src/day21/: mod.rs  player.rs  problem_1.rs  problem_2.rs  readme.md  situation.rs
src/day22/: coordinates.rs  mod.rs  problem_1.rs  problem_2.rs  readme.md
src/day23/: mod.rs  problem_1.rs  problem_2.rs  readme.md
(+10 files in other folders)
