[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[features]
non_solution_test = []

default = ["non_solution_test"]

[dependencies]
itertools = "0.10.1"
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
petgraph = "0.6.0"
regex = "1.5.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
thiserror = "1.0.30"
